--- a/styles/ashan.css
+++ b/styles/ashan.css
@@ -1,5 +1,9 @@
 body {
-    margin-top: 3%; /* This margin just makes the text easier to read. You can remove it if you want since it can mess with your other styles. */
+    margin-top: 3%;
+    line-height: 1.5;
+  }
+  .info{
+    letter-spacing: 10%;
   }
   .pdf{
     position: relative; 
@@ -7,16 +11,26 @@ body {
     width:25px;
   }
   .bg{
-    background-color: rgb(245, 245, 241);
+    background-color: rgb(240, 240, 240);
     padding: 5%;
-    border-radius:20px;
+    border-radius:30px;
   }
   a{
     word-wrap: break-word;
   }
 .aside.p{
   text-align: justify;
+  
 }
 .emdisable{
   pointer-events: none;
+}
+.bio{
+  
+  text-align: justify;
+}
+.row{
+  background-color: rgb(250, 250, 250);
+  padding: 1.5%;
+  border-radius:30px;
 }
