--- a/styles/ashan.css
+++ b/styles/ashan.css
@@ -14,6 +14,9 @@ body {
 .pdf{
   margin-bottom: 20px;
 }
+.logo:hover{
+text-decoration:none;
+}
 .linkedin{
   position:relative;
   height: 30px;
