--- a/styles/nav.css
+++ b/styles/nav.css
@@ -4,3 +4,12 @@
 .nav-item{
 font-size:20px ;
 }
+@media (max-width: 767.98px) {
+    .navbar-nav {
+        text-align: center;
+    }
+    .navbar-nav .nav-item {
+        margin-left: 0;
+        margin-bottom: 0.5rem;
+    }
+}
