--- a/styles/card.css
+++ b/styles/card.css
@@ -4,3 +4,45 @@ h2{
     padding-top: 3%;
     padding-bottom: 1%;
 }
+h3{
+    text-align: center;
+    padding: 3%;
+    padding-bottom: 0%;
+    margin-bottom:0;
+}
+hr{
+    width: 75%;
+    align-self: center;
+    border: 1px solid #beb4b4;
+}
+.card-text, li{
+    text-align: justify;
+  }
+.card{
+    margin-bottom: 60px;
+    border-radius:15px;
+}
+.card-img{
+    width: 100%;
+    height: 340px;
+    align-self: center;
+}
+.card-img-0{
+    width: 750px;
+}
+.card-img-1{
+    width: 600px;
+}
+.card-img-2{
+    width: 250px;
+}
+img{
+    align-self: center;
+}
+.card-img-top, .card-img-0, .card-img-1, .card-img-2{
+    height: 100%;
+    object-fit: contain;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
