--- a/styles/nav.css
+++ b/styles/nav.css
@@ -4,7 +4,7 @@
 .nav-item{
 font-size:20px ;
 }
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
     .navbar-nav {
         text-align: center;
     }
@@ -12,4 +12,27 @@ font-size:20px ;
         margin-left: 0;
         margin-bottom: 0.5rem;
     }
-}
+} */
+
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
