--- a/styles/profile.css
+++ b/styles/profile.css
@@ -54,3 +54,20 @@ a{
 .container{
   padding-top: 3%;
 }
+
+.badge-img{
+width: 40px;
+height: 25px;
+
+}
+/* .prof-img {
+  width: 300px;
+  height: 300px;
+}
+
+.prof-img img {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+} */
