--- a/styles/projects.css
+++ b/styles/projects.css
@@ -24,17 +24,17 @@ hr{
 }
 .card-img{
     width: 100%;
-    height: 340px;
+    height: auto;
     align-self: center;
 }
 .card-img-0{
-    width: 750px;
+    width: 77%;
 }
 .card-img-1{
-    width: 600px;
+    width: 60%;
 }
 .card-img-2{
-    width: 250px;
+    width: 25%;
 }
 img{
     align-self: center;
